# sampling-book

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  Makefile  README.md  algorithms.contour-sgld.json  algorithms.cyclical-sgld.json  algorithms.laplace-hmc-demo.json  algorithms.laps.json  algorithms.low-rank-mass-matrix.json  algorithms.mclmc.json  algorithms.meads.json  algorithms.nested-sampling.json  algorithms.pathfinder.json  algorithms.periodicorbitalmcmc.json  algorithms.slice-sampling.json  algorithms.smcvspersistentsampling.json  algorithms.temperedsmc.json  algorithms.temperedsmcwithoptimizedinnerkernel.json  config.json  genindex.html  index.html  index.json  models.change-of-variable-hmc.json  models.gp-ellipticalslicesampler.json  models.gp-marginal.json  models.hierarchical-bnn.json  models.logistic-regression.json  models.logisticregressionwithlatentgaussiansampler.json  models.mlp.json  models.probabilistic-ode-solver-parameter-estimation.json  models.regimeswitchingmodel.json  models.sparse-regression.json  myst.search.json  myst.xref.json  myst.yml  objects.inv  pyproject.toml  (+4 more)
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: index.doctree
.github/workflows/: lint.yml  publish.yml  rtd-nightly.yml  test.yml
_sources/: index.md.txt
_sources/algorithms/: Pathfinder.ipynb  PeriodicOrbitalMCMC.ipynb  PeriodicOrbitalMCMC.md  TemperedSMC.ipynb  TemperedSMC.md  TemperedSMCWithOptimizedInnerKernel.md  contour_sgld.ipynb  contour_sgld.md  cyclical_sgld.ipynb  cyclical_sgld.md  laps.md  mclmc.md  mcmc.md  pathfinder.ipynb  pathfinder.md
_sources/models/: GP_EllipticalSliceSampler.ipynb  GP_EllipticalSliceSampler.md  GP_Marginal.ipynb  GP_Marginal.md  LogisticRegression.ipynb  LogisticRegressionWithLatentGaussianSampler.ipynb  LogisticRegressionWithLatentGaussianSampler.md  RegimeSwitchingModel.ipynb  change_of_variable_hmc.ipynb  change_of_variable_hmc.md  hierarchical_bnn.ipynb  hierarchical_bnn.md  logistic_regression.ipynb  logistic_regression.md  mlp.ipynb  mlp.md  probabilistic_ode_solver_parameter_estimation.md  sparse_regression.ipynb  sparse_regression.md
algorithms/: Pathfinder.html  PeriodicOrbitalMCMC.html  SMCvsPersistentSampling.html  TemperedSMC.html  TemperedSMCWithOptimizedInnerKernel.html  contour_sgld.html  cyclical_sgld.html  laps.html  low_rank_mass_matrix.html  mclmc.html  mcmc.html  meads.html  pathfinder.html
algorithms/contour-sgld/: index.html
algorithms/cyclical-sgld/: index.html
algorithms/laplace-hmc-demo/: index.html
algorithms/laps/: index.html
algorithms/low-rank-mass-matrix/: index.html
algorithms/mclmc/: index.html
algorithms/meads/: index.html
algorithms/nested-sampling/: index.html
algorithms/pathfinder/: index.html
algorithms/periodicorbitalmcmc/: index.html
algorithms/slice-sampling/: index.html
algorithms/smcvspersistentsampling/: index.html
algorithms/temperedsmc/: index.html
algorithms/temperedsmcwithoptimizedinnerkernel/: index.html
book/: _config.yml  _toc.yml  conf.py  myst.yml  references.bib
book/algorithms/: Pathfinder.md  PeriodicOrbitalMCMC.md  SMCvsPersistentSampling.md  TemperedSMC.md  (+12 more)
models/: GP_EllipticalSliceSampler.html  GP_Marginal.html  LogisticRegression.html  LogisticRegressionWithLatentGaussianSampler.html  RegimeSwitchingModel.html  change_of_variable_hmc.html  hierarchical_bnn.html  logistic_regression.html  mlp.html  probabilistic_ode_solver_parameter_estimation.html  sparse_regression.html
source/: index.html
src/: __init__.py
(+23 files in other folders)
