[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "samplingbook"
authors= [{name = "The Blackjax team", email = "remi@thetypicalset.com"}]
description = "Utilities for Blackjax's sampling book"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "pandas",
]
dynamic = ["version"]

[dependency-groups]
book = [
    "blackjax @ git+https://github.com/blackjax-devs/blackjax.git@main",
    "aeppl",
    "aesara",
    "arviz",
    "datasets",
    "diffeqzoo",
    "fastprogress",
    "flax",
    "ipython",
    "jupyter-cache",
    "jupyter-book>=2",
    "jupytext",
    "matplotlib",
    "numpy",
    "numpyro",
    "optax",
    "pandas",
    "probdiffeq>=0.9.0",
    "scikit-learn",
    "seaborn",
    "tfp-nightly[jax]",
    "nbqa>=1.9.1",
    "black>=26.5.1",
    "isort>=8.0.1",
    "flake8>=7.3.0",
]

[project.urls]
homepage = "https://github.com/blackjax-devs/sampling-book"

[project.license]
text="Apache License 2.0"
files=["LICENSE"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.setuptools_scm]
write_to = "src/_version.py"
